K8S_Manisfest/demonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: thomisis
  labels:
    app: thomisis
spec:
  selector:
    matchLabels:
      app: thomisis
  template:
    metadata:
      labels:
        app: thomisis
    spec:
      containers:
      - name: thomisis
        image: nginx
