K8S_Manisfest/deploy-pdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 5                    # Number of Pods to run
  selector:
    matchLabels:
      app: my-app                 # Selector to match the Pods with the Deployment
  template:                       # Template for the Pods
    metadata:
      labels:
        app: my-app               # Label applied to Pods; should match PDB selector
    spec:
      containers:
      - name: my-app-container
        image: nginx    # Replace with the image you want to use
        ports:
        - containerPort: 80       # Port the container exposes
