K8S_Manisfest/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thomisis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: nginx
