K8S_Manisfest/podaffinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-affinity
spec:
  replicas: 3
  selector:
    matchLabels:
      data: blue
  template:
    metadata:
      labels:
        data: blue
    spec:
      containers:
      - name: my-container
        image: nginx
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: data
                operator: In
                values:
                - blue
            topologyKey: kubernetes.io/hostname
