K8S_Manisfest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: thomisis
  labels:
    app: thomisis
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: thomisis
